# mlops

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
mlops_deploy/: __init__.py  dataset.py  features.py  plots.py
mlops_deploy/app/: main.py
mlops_deploy/modeling/: predict.py  train.py
